--- a/libfastjson.pc.in
+++ b/libfastjson.pc.in
@@ -3,10 +3,10 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: json-c
-Description: JSON implementation in C
+Name: libfastjson
+Description: a fast JSON implementation in C
 Version: @VERSION@
 Requires:
 Libs.private: @LIBS@
-Libs:  -L${libdir} -ljson-c
-Cflags: -I${includedir}/json-c
+Libs:  -L${libdir} -lfastjson
+Cflags: -I${includedir}/libfastjson
