--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,7 +1,7 @@
 
 LDADD= $(LIBJSON_LA)
 
-LIBJSON_LA=$(top_builddir)/libjson-c.la
+LIBJSON_LA=$(top_builddir)/libfastjson.la
 
 TESTS=
 TESTS+= test1.test
@@ -9,13 +9,16 @@ TESTS+= test2.test
 TESTS+= test4.test
 TESTS+= testReplaceExisting.test
 TESTS+= test_parse_int64.test
-TESTS+= test_null.test
 TESTS+= test_cast.test
 TESTS+= test_parse.test
 TESTS+= test_locale.test
 TESTS+= test_charcase.test
 TESTS+= test_printbuf.test
 TESTS+= test_set_serializer.test
+# we officially do NOT support NUL bytes (however, we may
+# later add a workaround to at least transparently pass them
+# through, thus I keep this as reference).
+#TESTS+= test_null.test 
 
 check_PROGRAMS=
 check_PROGRAMS += $(TESTS:.test=)
