--- a/config.h.in
+++ b/config.h.in
@@ -6,6 +6,12 @@
 /* Define if .gnu.warning accepts long strings. */
 #undef HAS_GNU_WARNING_LONG
 
+/* Define if compiler provides atomic builtins */
+#undef HAVE_ATOMIC_BUILTINS
+
+/* Define if compiler provides 64 bit atomic builtins */
+#undef HAVE_ATOMIC_BUILTINS64
+
 /* Define to 1 if you have the declaration of `INFINITY', and to 0 if you
    don't. */
 #undef HAVE_DECL_INFINITY
