prepare for 0.99.0 release
This is a bit dirty, as we needed to work around some issues
inherited from json-c. I had expected that json-c would successfully
do a release built, and as I needed things quickly, I worked around
thing to get it going. For 1.0.0 we'll do a cleanup.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 
-EXTRA_DIST = README.html README-WIN32.html config.h.win32 doc json-c.vcproj
-SUBDIRS = . tests
+EXTRA_DIST = README.html README-WIN32.html config.h.win32 json-c.vcproj
+SUBDIRS = . # tests
 
 lib_LTLIBRARIES = libfastjson.la 
 
@@ -11,6 +11,7 @@ libfastjsonincludedir = $(includedir)/libfastjson
 libfastjsoninclude_HEADERS = \
 	arraylist.h \
 	atomic.h \
+	math_compat.h \
 	bits.h \
 	debug.h \
 	json.h \
