re-enable testbench
This will break "make distcheck", because that is also broken
in json-c. We will fix that with the next commits.

note that as we progress forward, we may need to remove some
tests because they test for things that we do not intend to
support in libfastjson

closes https://github.com/rsyslog/libfastjson/issues/9

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 
 EXTRA_DIST = README.html README-WIN32.html config.h.win32 json-c.vcproj \
 	atomic.h
-SUBDIRS = . # tests
+SUBDIRS = . tests
 
 lib_LTLIBRARIES = libfastjson.la 
 
