--- a/configure.ac
+++ b/configure.ac
@@ -7,6 +7,7 @@ AM_INIT_AUTOMAKE
 
 AC_PROG_CC_C99
 AC_PROG_MAKE_SET
+AC_USE_SYSTEM_EXTENSIONS
 
 AC_ARG_ENABLE(rdrand,
  AS_HELP_STRING([--enable-rdrand],
