build: install and distribute atomic.h
The atomic.h header file was added in
81a70813855d99d26d7ed60b7bf9f25743333624.
Make sure it is distributed in the dist tarball and also installed as
public header file, as it is referenced in json_object_private.h.

This basically reverts 95c76f181c17e391c3d9e151ffe911f81c0da06b.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 
-EXTRA_DIST = README.html \
-	atomic.h
+EXTRA_DIST = README.html
+
 SUBDIRS = . tests
 
 lib_LTLIBRARIES = libfastjson.la 
@@ -10,6 +10,7 @@ pkgconfig_DATA = libfastjson.pc
 
 libfastjsonincludedir = $(includedir)/libfastjson
 libfastjsoninclude_HEADERS = \
+	atomic.h \
 	arraylist.h \
 	debug.h \
 	json.h \
