--- a/.travis.yml
+++ b/.travis.yml
@@ -32,3 +32,6 @@ script:
   - make
   - export VERBOSE=1
   - make check
+  # most tests currently fail under "make distcheck", but we enable those
+  # that work (see also https://github.com/rsyslog/libfastjson/issues/43 )
+  - make distcheck TESTS="chk_version"
