build: enable more compile time warnings
Use the AX_COMPILER_FLAGS macro [1] provided by autoconf-archive to turn
on various compiler warnings. The behaviour can be modified via the
configure switch --enable-compile-warnings=no/yes/error.

The default is 'error' for builds from git.

[1] https://www.gnu.org/software/autoconf-archive/ax_compiler_flags.html

--- a/configure.ac
+++ b/configure.ac
@@ -104,6 +104,8 @@ AS_IF([test "x$enable_Bsymbolic" = "xcheck"],
 AS_IF([test "x$enable_Bsymbolic" = "xyes"], [JSON_BSYMBOLIC_LDFLAGS=-Wl[,]-Bsymbolic-functions])
 AC_SUBST(JSON_BSYMBOLIC_LDFLAGS)
 
+AX_COMPILER_FLAGS
+
 AC_CONFIG_FILES([
 Makefile
 libfastjson.pc
