--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
   apt:
     packages:
       - clang-3.6
+      - autoconf-archive
 
 env:
   # Note: we cannot give -Werror, as this confuses ./configure
