--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -17,6 +17,7 @@ TESTS+= test_charcase.test
 TESTS+= test_printbuf.test
 TESTS+= test_set_serializer.test
 TESTS+= test_object_object_add_ex.test
+TESTS+= test_many_subobj.test
 # we officially do NOT support NUL bytes (however, we may
 # later add a workaround to at least transparently pass them
 # through, thus I keep this as reference).
