--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,8 @@ install:
 before_script:
   - # note: valgrind is only available on Linux
   - if [ "$CC" == "gcc" ] && [ "$TRAVIS_OS_NAME" == "linux" ]; then export ENA_VG="--enable-valgrind"; fi
+  - if [ "$CC" == "clang" ] && [ "$TRAVIS_OS_NAME" == "linux" ]; then export SANITIZER="-fsanitize=address" ; fi
+  - if [ "$CC" == "clang" ] && [ "$TRAVIS_OS_NAME" == "linux" ]; then export CFLAGS="$CFLAGS -fsanitize=address" ; fi
   - ./configure $ENA_VG
 
 script:
