--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,9 @@ install:
   - sh autogen.sh
 
 before_script:
-  - sudo apt-get -qq --force-yes install valgrind
+  - sudo add-apt-repository ppa:adiscon/v8-stable -y
+  - sudo apt-get update -qq
+  - sudo apt-get -qq --force-yes install valgrind libfastjson
   - # note: valgrind is only available on Linux
   - if [ "$CC" == "gcc" ] && [ "$TRAVIS_OS_NAME" == "linux" ]; then export ENA_VG="--enable-valgrind"; fi
   - if [ "$CC" == "clang" ] && [ "$TRAVIS_OS_NAME" == "linux" ]; then export SANITIZER="-fsanitize=address" ; fi
@@ -42,5 +44,6 @@ script:
   - valgrind --tool=callgrind ls
   - export VERBOSE=1
   - make check
+  - cat tests/test-suite.log
   - cat tests/perf_to_string.trs
   - make distcheck
