build: link libfastjson against libm for modf()
glibc-2.42 changed modf causing IFUNC modf() resolution to fail at runtime
in rsyslog due to missing direct link against libm.

Adding -lm to Libs ensures the shared library has a DT_NEEDED entry for libm.

--- a/libfastjson.pc.in
+++ b/libfastjson.pc.in
@@ -8,5 +8,5 @@ Description: a fast JSON implementation in C
 Version: @VERSION@
 Requires:
 Libs.private: @LIBS@
-Libs:  -L${libdir} -lfastjson
+Libs:  -L${libdir} -lfastjson -lm
 Cflags: -I${includedir}/libfastjson
